--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://use.fontawesome.com/releases/v5.13.1/css/all.css");
+@font-face {
+    font-family: averta;
+    src: url(assets/fonts/Averta-Regular.ttf) format("opentype");
+  }
+
+* {
+    font-family: averta;
+}
