header-materials-routing

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,30 @@
 <div class="container-fluid slider">
     <div class="container-fuid slider-text">
         <button>Shop</button>
-        <h4>3 pasos al dia, 3 minutos al dia</h4>
+        <h2>3 pasos al dia, 3 minutos al dia</h2>
         <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
     </div>
 </div>
 
 <div class="container-fluid bienvenido">
         <h1>Bienvenido a la revolución masculina</h1>
-        <div class="container-fluid">
-            
+        <div class="container-fluid steps-container">
+            <div class="container step">
+                <h2>1</h2>
+                <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
+                <p><strong>¡Haz nuestro test</strong></p>
+            </div>
+            <div class="container step">
+                <h2>1</h2>
+                <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
+                <p><strong>¡Haz nuestro test</strong></p>
+            </div>
+            <div class="container step">
+                <h2>1</h2>
+                <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
+                <p><strong>¡Haz nuestro test</strong></p>
+            </div>
         </div>
+        
+          
 </div>
