--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,7 +2,7 @@
     font-family: averta !important;
 }
 .slider {
-    height: 70vh;
+    height: 60vh;
     background-image: url(../../../assets/images/homeslider.png);
     background-size: cover;
     background-position: center;
@@ -13,12 +13,15 @@
 .slider-text {
     width: 60%;
 
-    h1, h4 {
+    h1 {
         color: rgb(104, 103, 103);
+        font-size: 30px;
     }
-    h4 {
+    h2 {
         margin-bottom: 5px;
         margin-top: 5px;
+        color: rgb(104, 103, 103);
+
     }
 
     button {
@@ -29,6 +32,14 @@
 .bienvenido {
     margin-top: 5vh;
     h1 {
+        text-align: center;
+    }
+}
+
+.steps-container {
+    display: flex;
+
+    .step {
         text-align: center;
     }
 }
