--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
             <a>
                 <i class="fas fa-shopping-cart"></i>
             </a>
-            <a>
+            <a (click)="showLogin.emit(true)">
                 <i class="fas fa-user"></i>
             </a>
         </div>
