--- a/src/app/admin/components/header-admin/header-admin.component.html
+++ b/src/app/admin/components/header-admin/header-admin.component.html
@@ -4,7 +4,7 @@
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" routerLink="">
+      <a class="navbar-brand" routerLink="/admin">
           <img src="../../../assets/images/logos/Logo_oscuro.png" width="100" alt="" loading="lazy">
       </a>
       <a></a>
@@ -26,9 +26,14 @@
                 <a class="nav-link" routerLink="/admin/clientes">CLIENTES</a>
             </li>
           </ul>
-          <a>
-              <i class="fas fa-shopping-cart"></i>
+          <div class="left">
+            <a>
+                <i class="fas fa-shopping-cart fa-2x"></i>
+            </a>
+            <a (click)="logOut()">
+              <i class="fas fa-sign-out-alt fa-2x"></i>
           </a>
+          </div>
       </div>
   </nav>
 </div>
