--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,3 +15,15 @@
 button:focus {
     outline: none !important;
 }
+
+.left {
+  position: absolute;
+  right: 0;
+  padding-right: 1.6rem;
+
+  a {
+    color: black;
+    padding : 0.6rem;
+  }
+}
+
