--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,93 @@
+<!-- slider -->
 <div class="container-fluid slider">
     <div class="container-fuid slider-text">
-        <button>Shop</button>
+        <button class="arrow-button">Shop</button>
         <h2>3 pasos al dia, 3 minutos al dia</h2>
         <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
     </div>
 </div>
 
+<!-- bienvenido -->
 <div class="container-fluid bienvenido">
-        <h1>Bienvenido a la revolución masculina</h1>
-        <div class="container-fluid steps-container">
-            <div class="container step">
-                <h2>1</h2>
+    <h1>Bienvenido a la revolución masculina</h1>
+    <div class="container-fluid steps-container">
+        <div class="container step">
+            <a routerLink="/shop">
+                <p class="step-number">1</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Haz nuestro test</strong></p>
-            </div>
-            <div class="container step">
-                <h2>1</h2>
+                <p><strong>¡Haz nuestro test!</strong></p>
+            </a>
+        </div>
+        <div class="container step">
+            <a routerLink="/muestras">
+                <p class="step-number">2</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Haz nuestro test</strong></p>
-            </div>
-            <div class="container step">
-                <h2>1</h2>
+                <p><strong>¡Prueba nuestras muestras gratuitas!</strong></p>
+            </a>
+        </div>
+        <div class="container step">
+            <a routerLink="/shop">
+                <p class="step-number">3</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Haz nuestro test</strong></p>
+                <p><strong>¡Boxsr es para ti!</strong></p>
+            </a>
+        </div>
+    </div>
+</div>
+
+<!--3 images-->
+<div class="container-fluid section1">
+    <div class="row">
+        <div class="col-4 test">
+            <button class="arrow-button">TEST DE PIEL</button>
+        </div>
+        <div class="col-4 muestras">
+            <button class="arrow-button">MUESTRAS</button>
+        </div>
+        <div class="col-4 boxes">
+            <button class="arrow-button">BOXES</button>
+        </div>
+    </div>
+</div>
+
+<!--best sellers-->
+<div class="container-fluid section2">
+    <div class="row">
+        <div class="col-4 face1">
+        </div>
+        <div class="col-4 text-col">
+        </div>
+        <div class="col-4 face2">
+        </div>
+    </div>
+</div>
+
+<!--ingredientes-->
+<div class="container-fluid section3">
+    <div class="row">
+        <div class="col">
+            <button class="arrow-button">Shop</button>
+            <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
+        </div>
+    </div>
+</div>
+
+<!--consulta-->
+<div class="container-fluid section4">
+    <div class="row">
+        <div class="col-4">
+            <div class="text-box">
+                <p>¿Necesitas ayuda?</p>
+                <h1><strong>Consulta gratuita con un experto de BOXSR</strong></h1>
+                <p>Te resolvemos todas tus dudas en una <strong>sesión de 10 minutos por llamada o videolalmada</strong>
+                </p>
+                <button class="arrow-button">Reservar</button>
             </div>
         </div>
-        
-          
+        <div class="col-8"></div>
+    </div>
 </div>
+
+<!--REVIEWS COMPONENT-->
+<!--FOOTER COMPONENT-->
+
