--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,10 +1,13 @@
-.container-fluid {
+.header {
     padding: 0px;
+    background-color: rgba(199, 198, 198, 0.445) !important;
+
 }
 
 .navbar {
     padding-top: 0px;
     padding-bottom: 0px;
+    background-color: transparent !important;
 }
 
 .navbar-toggler {
@@ -14,4 +17,13 @@
 
 button:focus {
     outline: none !important;
+}
+
+a {
+    color: black;
+    font-size: 16px;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
