--- a/src/app/admin/components/header-admin/header-admin.component.html
+++ b/src/app/admin/components/header-admin/header-admin.component.html
@@ -28,10 +28,10 @@
           </ul>
           <div class="left">
             <a>
-                <i class="fas fa-shopping-cart fa-2x"></i>
+                <i class="fas fa-shopping-cart fa-lg"></i>
             </a>
             <a (click)="logOut()">
-              <i class="fas fa-sign-out-alt fa-2x"></i>
+              <i class="fas fa-sign-out-alt fa-lg"></i>
           </a>
           </div>
       </div>
