--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,13 +22,13 @@
             </ul>
             <div class="left">
               <a>
-                  <i class="fas fa-shopping-cart fa-2x"></i>
+                  <i class="fas fa-shopping-cart fa-lg"></i>
               </a>
               <a *ngIf="!isUserAuthenticated" (click)="showLogin.emit(true)">
-                  <i class="fas fa-user fa-2x"></i>
+                  <i class="fas fa-user fa-lg"></i>
               </a>
               <a *ngIf="isUserAuthenticated" (click)="logOut()">
-                <i class="fas fa-sign-out-alt fa-2x"></i>
+                <i class="fas fa-sign-out-alt fa-lg"></i>
             </a>
           </div>
         </div>
