--- a/src/app/admin/components/header-admin/header-admin.component.scss
+++ b/src/app/admin/components/header-admin/header-admin.component.scss
@@ -21,9 +21,10 @@ button:focus {
 }
 
 .left {
+  padding-right: 1.6rem;
   position: absolute;
   right: 0;
-  padding-right: 1.6rem;
+  top: 1.4rem;
 
   a {
     color: black;
