--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -17,9 +17,10 @@ button:focus {
 }
 
 .left {
+  padding-right: 1.6rem;
   position: absolute;
   right: 0;
-  padding-right: 1.6rem;
+  top: 1.4rem;
 
   a {
     color: black;
