--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,13 @@
 .container{
   padding: 1.6rem;
 }
+
+:host{
+p-sidebar{
+  ::ng-deep {
+    .p-sidebar{
+      z-index: 9999 !important;
+    }
+  }
+  }
+}
