--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -28,3 +28,17 @@ a {
         text-decoration: underline;
     }
 }
+
+
+.left {
+  padding-right: 1.6rem;
+  position: absolute;
+  right: 0;
+  top: 1.4rem;
+
+   a {
+     color: black;
+     padding : 0.6rem;
+   }
+}
+
