--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,35 +1,44 @@
 <!-- slider -->
 <div class="container-fluid slider">
-    <div class="container-fuid slider-text">
-        <button class="arrow-button">Shop</button>
-        <h2>3 pasos al dia, 3 minutos al dia</h2>
-        <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
+    <div class="row slider-text">
+        <div class="col-12">
+            <button class="arrow-button">SHOP</button>
+            <h2>3 pasos al dia, 3 minutos al dia</h2>
+            <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
+        </div>
     </div>
 </div>
 
 <!-- bienvenido -->
 <div class="container-fluid bienvenido">
-    <h1>Bienvenido a la revolución masculina</h1>
-    <div class="container-fluid steps-container">
-        <div class="container step">
+    <div class="row">
+        <div class="col-12">
+            <h1>Bienvenido a la revolución masculina</h1>
+        </div>
+    </div>
+
+    <div class="row steps-container">
+        <div class="col-12 col-md-4 step">
             <a routerLink="/shop">
                 <p class="step-number">1</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
                 <p><strong>¡Haz nuestro test!</strong></p>
             </a>
         </div>
-        <div class="container step">
+
+        <div class="col-12 col-md-4 step">
             <a routerLink="/muestras">
                 <p class="step-number">2</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Prueba nuestras muestras gratuitas!</strong></p>
+                <p><strong>¡Haz nuestro test!</strong></p>
             </a>
         </div>
-        <div class="container step">
+
+        <div class="col-12 col-md-4 step">
             <a routerLink="/shop">
                 <p class="step-number">3</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Boxsr es para ti!</strong></p>
+                <p><strong>¡Haz nuestro test!</strong></p>
             </a>
         </div>
     </div>
@@ -38,13 +47,13 @@
 <!--3 images-->
 <div class="container-fluid section1">
     <div class="row">
-        <div class="col-4 test">
+        <div class="col-12 col-md-4 test">
             <button class="arrow-button">TEST DE PIEL</button>
         </div>
-        <div class="col-4 muestras">
+        <div class="col-12 col-md-4 muestras">
             <button class="arrow-button">MUESTRAS</button>
         </div>
-        <div class="col-4 boxes">
+        <div class="col-12 col-md-4 boxes">
             <button class="arrow-button">BOXES</button>
         </div>
     </div>
@@ -53,11 +62,11 @@
 <!--best sellers-->
 <div class="container-fluid section2">
     <div class="row">
-        <div class="col-4 face1">
+        <div class="col-12 col-md-4 face1">
         </div>
-        <div class="col-4 text-col">
+        <div class="col-12 col-md-4 text-col">
         </div>
-        <div class="col-4 face2">
+        <div class="col-12 col-md-4 face2">
         </div>
     </div>
 </div>
@@ -75,7 +84,7 @@
 <!--consulta-->
 <div class="container-fluid section4">
     <div class="row">
-        <div class="col-4">
+        <div class="col-12 col-md-4 text-col">
             <div class="text-box">
                 <p>¿Necesitas ayuda?</p>
                 <h1><strong>Consulta gratuita con un experto de BOXSR</strong></h1>
@@ -83,11 +92,11 @@
                 </p>
                 <button class="arrow-button">Reservar</button>
             </div>
+
         </div>
-        <div class="col-8"></div>
+        <div class="col-12 col-md-8 consulta-image"></div>
     </div>
 </div>
 
 <!--REVIEWS COMPONENT-->
 <!--FOOTER COMPONENT-->
-
