--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -16,7 +16,7 @@ body {
 
 //Slider
 .slider {
-  margin-top: -60px;
+  margin-top: -70px;
   height: 90vh;
   background-image: url(../../../assets/images/sliderrecortada-home.png);
   background-size: cover;
@@ -156,6 +156,8 @@ body {
 
   h1 {
     color: white;
+    margin-right: 20px;
+    margin-bottom: 20px;
   }
 }
 
