--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,7 @@
 <app-header-admin></app-header-admin>
-<h1>aqui va el panel de control</h1>
+<h2>TOTAL VENTAS MENSUALES</h2>
+<h1>{{ totalVentasDiarias }}</h1>
+
+<h2>TOTAL VENTAS DIARIAS</h2>
+<h1>{{ totalVentasDiarias }}</h1>
 
