tabla producto + filter y sort

--- a/src/app/admin/pages/productos/productos.component.html
+++ b/src/app/admin/pages/productos/productos.component.html
@@ -1,2 +1,3 @@
 <app-header-admin></app-header-admin>
-<p>productos works!</p>
+<h1>LISTADO DE PRODUCTOS</h1>
+<app-productos-list></app-productos-list>
