Creado el componente de crear productos

--- a/src/app/admin/pages/productos/productos.component.html
+++ b/src/app/admin/pages/productos/productos.component.html
@@ -1,2 +1,8 @@
 <app-header-admin></app-header-admin>
-<p>productos works!</p>
+
+
+
+
+<app-crear-productos [display]="mostrarCrearProductos" (cerrarDialogo)="onOcultarCrearProductos()" *ngIf="mostrarCrearProductos"></app-crear-productos>
+
+<button (click)="onMostrarCrearProductos()">Mostrar productos</button>
