--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,2 @@
 <app-header-admin></app-header-admin>
-<h2>TOTAL VENTAS MENSUALES</h2>
-<h1>{{ totalVentasDiarias }}</h1>
-
-<h2>TOTAL VENTAS DIARIAS</h2>
-<h1>{{ totalVentasDiarias }}</h1>
-
+<app-home-admin></app-home-admin>
