--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,2 +1,2 @@
 <app-header-admin></app-header-admin>
-<app-home-admin></app-home-admin>
+<app-home-admin [admins]="listadoDeAdmin"></app-home-admin>
