--- a/src/app/admin/pages/productos/crear-productos/crear-productos.component.html
+++ b/src/app/admin/pages/productos/crear-productos/crear-productos.component.html
@@ -81,7 +81,11 @@
     <div class="form-group">
       <mat-form-field class="full-width">
         <mat-label>Peso</mat-label>
-        <input matInput formControlName="peso" [ngClass]="{ 'is-invalid': submitted && f.peso.errors }" />
+        <input matInput  pattern="^\d+(\.\d{1,3})?$"
+        digitOnly
+        decimal="true"
+        decimalSeparator="."
+         formControlName="peso" [ngClass]="{ 'is-invalid': submitted && f.peso.errors }" />
         <div *ngIf="submitted && f.peso.errors" class="invalid-feedback">
             <div *ngIf="f.peso.errors.required">Peso de producto requerido</div>
         </div>
@@ -90,7 +94,7 @@
     <div class="form-group">
       <mat-form-field class="full-width">
         <mat-label>Stock</mat-label>
-        <input matInput formControlName="stock" [ngClass]="{ 'is-invalid': submitted && f.stock.errors }" />
+        <input matInput digitOnly formControlName="stock" [ngClass]="{ 'is-invalid': submitted && f.stock.errors }" />
         <div *ngIf="submitted && f.stock.errors" class="invalid-feedback">
           <div *ngIf="f.stock.errors.required">Stock de producto requerido</div>
       </div>
@@ -99,7 +103,12 @@
     <div class="form-group">
       <mat-form-field class="full-width">
         <mat-label>Precio</mat-label>
-        <input matInput formControlName="precio" [ngClass]="{ 'is-invalid': submitted && f.precio.errors }" />
+        <input matInput formControlName="precio"
+        pattern="^\d+(\.\d{1,2})?$"
+        digitOnly
+        decimal="true"
+        decimalSeparator="."
+        [ngClass]="{ 'is-invalid': submitted && f.precio.errors }" />
         <div *ngIf="submitted && f.precio.errors" class="invalid-feedback">
             <div *ngIf="f.precio.errors.required">Precio de producto requerido</div>
         </div>
