--- a/src/app/admin/pages/colecciones/crear-coleccion/crear-coleccion.component.html
+++ b/src/app/admin/pages/colecciones/crear-coleccion/crear-coleccion.component.html
@@ -36,12 +36,55 @@
         decimal="true"
         decimalSeparator="."
         formControlName="precio_original" [ngClass]="{ 'is-invalid': submitted && f.precio_original.errors }" />
-        <div *ngIf="submitted && f.peso.errors" class="invalid-feedback">
+        <div *ngIf="submitted && f.precio_original.errors" class="invalid-feedback">
             <div *ngIf="f.precio_original.errors.required">Precio original requerido</div>
         </div>
       </mat-form-field>
     </div>
   </form>
+
+  <div class="table">
+    <mat-form-field>
+      <mat-label>Filtrar</mat-label>
+      <input matInput (keyup)="applyFilter($event)" #input>
+    </mat-form-field>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="precio">
+        <th mat-header-cell *matHeaderCellDef> Precio </th>
+        <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef> Tipo de producto </th>
+        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="seleccionado">
+        <th mat-header-cell *matHeaderCellDef> Incluido </th>
+        <td mat-cell *matCellDef="let element">
+          <mat-checkbox [(ngModel)]="element.seleccionado" (change)="calcularTotal($event, element.precio, element.id)"></mat-checkbox>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No hay datos"{{input.value}}"</td>
+      </tr>
+    </table>
+  </div>
 
   <ng-template pTemplate="footer">
     <div class="form-group">
