--- a/src/app/admin/pages/colecciones/crear-coleccion/crear-coleccion.component.scss
+++ b/src/app/admin/pages/colecciones/crear-coleccion/crear-coleccion.component.scss
@@ -31,4 +31,14 @@
         width: 80%;
       }
     }
+
+  /* Structure */
+  table {
+    width: 100%;
+  }
+
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
 }
