--- a/src/app/admin/pages/home-admin/home-admin.component.html
+++ b/src/app/admin/pages/home-admin/home-admin.component.html
@@ -4,24 +4,75 @@
 <h2>TOTAL VENTAS DIARIAS</h2>
 <h1>{{ totalVentasDiarias }}</h1>
 
-<h2>LISTA DE ADMINISTRADORES</h2>
+<h2>LISTA DE ADMINISTRADORES ACTIVOS</h2>
 <div class="tabla">
 <table width="100%">
     <thead>
         <th>Nombre</th>
         <th>Apellidos</th>
         <th>Email</th>
-        <th>Rol</th>
+        <th>Activo</th>
     </thead>
 <tbody>
-<ng-container *ngFor ="let item of admins">
+<ng-container *ngFor ="let item of listaAdmin">
     <tr>
         <td>{{item.nombre}}</td>
         <td>{{item.apellidos}}</td>
         <td>{{item.email}}</td>
-        <td>{{item.rol}}</td>
+        <td>{{item.deleted}}</td>
     </tr>
 </ng-container>
 </tbody>
 </table>
+</div>
+<h2>LISTA DE ADMINISTRADORES INACTIVOS</h2>
+<div class="tabla">
+<table width="100%">
+    <thead>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+        <th>Email</th>
+        <th>Activo</th>
+    </thead>
+<tbody>
+<ng-container *ngFor ="let item of listadoDeAdminInactivos">
+    <tr>
+        <td>{{item.nombre}}</td>
+        <td>{{item.apellidos}}</td>
+        <td>{{item.email}}</td>
+        <td>{{item.deleted}}</td>
+    </tr>
+</ng-container>
+</tbody>
+</table>
+</div>
+<br><br><br>
+<h1>Crear administrador</h1>
+<div>
+    <form [formGroup]="formularioAdmin" (ngSubmit)="guardar(formularioAdmin.value)">
+        <div class="row">
+            <div class="field-element">
+                <label for="">Nombre</label>
+                <input  type="text" formControlName="nombre">
+            </div>
+            <div class="field-element">
+                <label for="">Apellidos</label>
+                <input type="text" formControlName="apellidos">
+            </div>
+            <div class="field-element">
+                <label for="">Email</label>
+                <input type="email" formControlName="email">
+            </div>
+            <div class="field-element">
+                <label for="">Activo</label>
+                <select formControlName="deleted">
+                    <option [value]="item" *ngFor="let item of admins">{{item.deleted}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="row-reverse">
+            <button class="btn primary"> Guardar</button>
+            <button class="btn" type="button" (click)="nuevoAdmin()">Nuevo Admin</button>
+        </div>
+    </form>
 </div>
