Se incluyen los productos asociados de la coleccion

--- a/src/app/admin/pages/colecciones/modificar-coleccion/modificar-coleccion.component.html
+++ b/src/app/admin/pages/colecciones/modificar-coleccion/modificar-coleccion.component.html
@@ -36,7 +36,7 @@
         decimal="true"
         decimalSeparator="."
         formControlName="precio_original" [ngClass]="{ 'is-invalid': submitted && f.precio_original.errors }" />
-        <div *ngIf="submitted && f.peso.errors" class="invalid-feedback">
+        <div *ngIf="submitted && f.precio_original.errors" class="invalid-feedback">
             <div *ngIf="f.precio_original.errors.required">Precio original requerido</div>
         </div>
       </mat-form-field>
