--- a/src/app/admin/pages/productos/productos-list/productos-list.component.html
+++ b/src/app/admin/pages/productos/productos-list/productos-list.component.html
@@ -10,20 +10,35 @@
 
             <!-- ID Column -->
             <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Código de producto</th>
+                <td mat-cell *matCellDef="let row"> {{row.codigo_producto}} </td>
             </ng-container>
 
             <!-- nombre Column -->
             <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-                <td mat-cell *matCellDef="let row"> {{row.nombre}}% </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+                <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="tipo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> tipo </th>
-                <td mat-cell *matCellDef="let row"> {{row.tipo}} </td>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo</th>
+                <td mat-cell *matCellDef="let row"> {{row.tipo_producto}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="stock">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Stock</th>
+                <td mat-cell *matCellDef="let row"> {{row.stock}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="peso">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Peso</th>
+                <td mat-cell *matCellDef="let row"> {{row.peso}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="precio">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
+                <td mat-cell *matCellDef="let row"> {{row.precio}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
