modificación page conócenos

--- a/src/app/pages/conocenos/conocenos.component.html
+++ b/src/app/pages/conocenos/conocenos.component.html
@@ -12,7 +12,7 @@
   <div class="row">
       <div class="col-12">
           
-        <h2 class="140-vh black">BOXSR nace con la misión de romper con los tabúes en el mundo de la cosmética masculina ofreciendo una solución cmopleta
+        <h2 class="140-vh black">BOXSR nace con la misión de romper con los tabúes en el mundo de la cosmética masculina ofreciendo una solución completa
           en un sector que ha estado tradicionalmente enfocada hacia el rostro femenino. No vendemos productos, sino rutinas y queremos
           ser el guia referente para tu bienestar.
         </h2>
