--- a/src/app/admin/pages/productos/productos-list/productos-list.component.html
+++ b/src/app/admin/pages/productos/productos-list/productos-list.component.html
@@ -41,6 +41,13 @@
                 <td mat-cell *matCellDef="let row"> {{row.precio}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+              <td mat-cell *matCellDef="let row">
+                <button (click)="modificarProducto(row)">Modificar</button>
+              </td>
+          </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
