--- a/src/app/admin/pages/productos/productos.component.html
+++ b/src/app/admin/pages/productos/productos.component.html
@@ -1,2 +1,9 @@
 <app-header-admin></app-header-admin>
-<app-productos-list></app-productos-list>
+<button (click)="onMostrarCrearProductos()">Crear producto</button>
+
+<app-productos-list (modificar)="modificarProducto($event)"></app-productos-list>
+
+
+<app-crear-productos [display]="mostrarCrearProductos" (cerrarDialogo)="onOcultarCrearProductos()" *ngIf="mostrarCrearProductos"></app-crear-productos>
+
+<app-modificar-productos [display]="mostrarModificarProductos" [producto]="productoModificar" (cerrarDialogo)="onOcultarModificarProductos()" *ngIf="mostrarModificarProductos"></app-modificar-productos>
