header con ruta a paginas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container-fluid header sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler navbar" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -16,9 +18,17 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/muestras">MUESTRAS</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/sobre-boxsr">SOBRE BOXSR</a>
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toogle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" data-hover="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/sobre-boxsr">SOBRE BOXSR</a>
+                    <div class="dropdown-menu" >
+                        <a class="dropdown-item"   href="/conocenos">Conócenos</a>
+                        <a class="dropdown-item"  href="/piel">La piel del hombre</a>
+                        <a class="dropdown-item"  href="/ingredientes">Ingredientes activos</a>
+                      </div>
                 </li>
+                
+                   
+                  
             </ul>
         </div>
         <div class="left">
