--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -48,3 +48,17 @@ a {
    }
 }
 
+.dropdown-menu{
+    background: unset;
+    border: unset;
+    // display:none;
+    // :hover{
+    //     display: block;
+    // }
+   
+    
+}
+.dropdown-item{
+    background-color: unset;
+    font-weight: 70;
+}
