--- a/src/app/admin/pages/home-admin/home-admin.component.html
+++ b/src/app/admin/pages/home-admin/home-admin.component.html
@@ -5,7 +5,11 @@
 <h1>{{ totalVentasDiarias }}</h1>
 
 <button (click)="onMostrarCrearProductos()">Crear producto</button>
+
 <app-crear-admin  [display]="mostrarCrearProductos" (cerrarDialogo)="onOcultarCrearProductos()" *ngIf="mostrarCrearProductos"></app-crear-admin>
+<app-lista-admin></app-lista-admin>
+
+
 <!-- <h2>LISTA DE ADMINISTRADORES ACTIVOS</h2>
 <div class="tabla">
 <table width="100%">
