--- a/src/app/pages/pago-seguro/pago-seguro.component.scss
+++ b/src/app/pages/pago-seguro/pago-seguro.component.scss
@@ -1,5 +1,6 @@
 * {
     font-family: averta !important;
+    color: #4B4A4A;
   }
   .black{
     font-weight: revert;
@@ -8,5 +9,8 @@
     font-style: italic;
   }
   .padding{
-   padding:7%;
+    padding-top: 7%;
+    padding-bottom: 7%;
+    padding-left: 12%;
+    padding-right: 12%;
   }
