--- a/src/app/admin/pages/productos/productos-list/productos-list.component.html
+++ b/src/app/admin/pages/productos/productos-list/productos-list.component.html
@@ -46,10 +46,16 @@
                 <td mat-cell *matCellDef="let row"> {{row.precio}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="deleted">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Activo</th>
+              <td mat-cell *matCellDef="let row"> {{row.deleted}} </td>
+          </ng-container>
+
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
               <td mat-cell *matCellDef="let row">
                 <button (click)="modificarProducto(row)">Modificar</button>
+                <button (click)="borrarProducto(row.producto_id)">Borrar</button>
               </td>
           </ng-container>
 
