--- a/src/app/admin/pages/productos/productos.component.html
+++ b/src/app/admin/pages/productos/productos.component.html
@@ -1,7 +1,7 @@
 <app-header-admin></app-header-admin>
 <button (click)="onMostrarCrearProductos()">Crear producto</button>
 
-<app-productos-list (modificar)="modificarProducto($event)"></app-productos-list>
+<app-productos-list (modificar)="modificarProducto($event)" (borrar)="borrarProducto($event)"></app-productos-list>
 
 
 <app-crear-productos [display]="mostrarCrearProductos" (cerrarDialogo)="onOcultarCrearProductos()" *ngIf="mostrarCrearProductos"></app-crear-productos>
