--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -11,7 +11,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 filtro">
-            
+
         </div>
 
     </div>
@@ -23,97 +23,79 @@
     <div class="row">
 
         <div class="col-12 col-md-6 card-container">
-            <div class="container-fluid card-img">
+            <a href="">
+                <div class="container-fluid card-img">
 
-            </div>
-            <div class="container-fluid card-text">
-                <h2>Serum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id eius
-                    assumenda sed nam vel.</p>
-                <h3>50€</h3>
-                <button class="arrow-button">SHOP NOW</button>
-            </div>
+                </div>
+                <div class="container-fluid card-text">
+                    <h2>Anti Arrugas</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
+                        eius
+                        assumenda sed nam vel.</p>
+                    <h3>50€</h3>
+                    <button class="arrow-button">SHOP NOW</button>
+                </div>
+            </a>
         </div>
 
         <div class="col-12 col-md-6 card-container">
-            <div class="container-fluid card-img">
+            <a href="">
+                <div class="container-fluid card-img">
 
-            </div>
-            <div class="container-fluid card-text">
-                <h2>Serum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id eius
-                    assumenda sed nam vel.</p>
-                <h3>50€</h3>
-                <button class="arrow-button">SHOP NOW</button>
-            </div>
+                </div>
+                <div class="container-fluid card-text">
+                    <h2>Anti Arrugas</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
+                        eius
+                        assumenda sed nam vel.</p>
+                    <h3>50€</h3>
+                    <button class="arrow-button">SHOP NOW</button>
+                </div>
+            </a>
         </div>
     </div>
 
     <!--row-->
     <div class="row">
-        
-        <div class="col-12 col-md-6 card-container">
-            <div class="container-fluid card-img">
 
-            </div>
-            <div class="container-fluid card-text">
-                <h2>Serum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id eius
-                    assumenda sed nam vel.</p>
-                <h3>50€</h3>
-                <button class="arrow-button">SHOP NOW</button>
-            </div>
+        <div class="col-12 col-md-6 card-container">
+            <a href="">
+                <div class="container-fluid card-img">
+
+                </div>
+                <div class="container-fluid card-text">
+                    <h2>Anti Arrugas</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
+                        eius
+                        assumenda sed nam vel.</p>
+                    <h3>50€</h3>
+                    <button class="arrow-button">SHOP NOW</button>
+                </div>
+            </a>
         </div>
 
         <div class="col-12 col-md-6 card-container">
-            <div class="container-fluid card-img">
+            <a href="">
+                <div class="container-fluid card-img">
 
-            </div>
-            <div class="container-fluid card-text">
-                <h2>Serum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id eius
-                    assumenda sed nam vel.</p>
-                <h3>50€</h3>
-                <button class="arrow-button">SHOP NOW</button>
-            </div>
-        </div>
-    </div>
-
-    <!--row-->
-    <div class="row">
-        
-        <div class="col-12 col-md-6 card-container">
-            <div class="container-fluid card-img">
-
-            </div>
-            <div class="container-fluid card-text">
-                <h2>Serum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id eius
-                    assumenda sed nam vel.</p>
-                <h3>50€</h3>
-                <button class="arrow-button">SHOP NOW</button>
-            </div>
-        </div>
-
-        <div class="col-12 col-md-6 card-container">
-            <div class="container-fluid card-img">
-
-            </div>
-            <div class="container-fluid card-text">
-                <h2>Serum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id eius
-                    assumenda sed nam vel.</p>
-                <h3>50€</h3>
-                <button class="arrow-button">SHOP NOW</button>
-            </div>
+                </div>
+                <div class="container-fluid card-text">
+                    <h2>Anti Arrugas</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, odio quis illo qui cumque id
+                        eius
+                        assumenda sed nam vel.</p>
+                    <h3>50€</h3>
+                    <button class="arrow-button">SHOP NOW</button>
+                </div>
+            </a>
         </div>
     </div>
 
 
 
-    
 
-    
+
+
 </div>
 
 <!--REVIEWS COMPONENT-->
