--- a/src/app/admin/pages/home-admin/lista-admin/lista-admin.component.html
+++ b/src/app/admin/pages/home-admin/lista-admin/lista-admin.component.html
@@ -1,13 +1,13 @@
 <div class="grid-container">
 
   <mat-form-field>
-      <mat-label>Filter</mat-label>
+      <mat-label>Filtro</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
   </mat-form-field>
-
+ 
+  
   <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
-
 
           <!-- nombre Column -->
           <ng-container matColumnDef="nombre">
@@ -34,13 +34,13 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
             <td mat-cell *matCellDef="let row">
-              <button (click)="modificarProducto(row)">Modificar</button>
+              <button (click)="modificarAdmin(row)">Modificar</button>
             </td>
         </ng-container>
         <ng-container matColumnDef="deleted">
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
           <td mat-cell *matCellDef="let row">
-            <button (click)="modificarProducto(row)">Eliminar</button>
+            <button>Eliminar</button>
           </td>
       </ng-container>
 
@@ -53,6 +53,6 @@
           </tr>
       </table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]"></mat-paginator>
   </div>
 </div>
